# api/src/routes.js
@@ -1,6 +1,7 @@
 const express = require('express');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
+const{getListUsers,getUserById,createUser,updatePlayer,removeUser} = require('./controller/user.controller');
 
 const router = express.Router();
 router.use(express.json());
@@ -9,6 +10,14 @@ router.use(express.json());
 router.use('/api', swaggerUi.serve);
 router.get('/api', swaggerUi.setup(swaggerDocument));
 
-//users
+/**
+ * API users
+ */
+router.get('/users',getListUsers);
+router.get('/users/:uid',getUserById);
+router.post('/users',createUser);
+router.put('/users/:uid',updatePlayer);
+router.delete('/users/:uid',removeUser);
+
 module.exports = router;
 
