# api/src/swagger.json
@@ -15,64 +15,52 @@
     ],
     "tags": [
         {
-            "name": "Test",
-            "description": "This set of API endpoint is for testing purposes",
-            "externalDocs": {
-                "description": "Find out more",
-                "url": "https://github.com/giuseppealbrizio"
-            }
-        },
-        {
             "name": "Auth",
             "description": "Authorization routes"
         },
         {
-            "name": "User",
+            "name": "Users",
             "description": "User routes"
         }
     ],
     "paths": {
-        "/": {
-            "get": {
+        "/users": {
+            "post": {
                 "tags": [
-                    "Test"
+                    "Users"
                 ],
-                "summary": "Test API Endpoint",
-                "operationId": "testEndpoint",
-                "responses": {
-                    "200": {
-                        "description": "successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "status": {
-                                            "type": "string"
-                                        },
-                                        "message": {
-                                            "type": "string"
-                                        }
-                                    }
-                                }
+                "summary": "Create a new user",
+                "description": "Create a new user",
+                "operationId": "createUser",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/User"
                             }
                         }
                     },
-                    "404": {
-                        "description": "Resource not found",
-                        "content": {}
-                    }
+                    "required": true
                 },
-                "x-codegen-request-body-name": "body"
-            }
-        },
-        "/users": {
+                "responses": {
+                    "201": {
+                        "description": "User created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/User"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "get": {
                 "tags": [
-                    "User"
+                    "Users"
                 ],
                 "summary": "Retrieve all users",
-                "operationId": "findUsers",
+                "operationId": "getListUsers",
                 "responses": {
                     "200": {
                         "description": "successful operation",
@@ -81,12 +69,6 @@
                                 "schema": {
                                     "type": "object",
                                     "properties": {
-                                        "status": {
-                                            "type": "string"
-                                        },
-                                        "message": {
-                                            "type": "string"
-                                        },
                                         "data": {
                                             "type": "object",
                                             "properties": {
@@ -95,53 +77,31 @@
                                                     "items": {
                                                         "type": "object",
                                                         "properties": {
-                                                            "_id": {
+                                                            "id": {
+                                                                "type": "integer"
+                                                            },
+                                                            "firstName": {
+                                                                "type": "string"
+                                                            },
+                                                            "lastName": {
                                                                 "type": "string"
                                                             },
                                                             "email": {
                                                                 "type": "string"
                                                             },
-                                                            "username": {
+                                                            "birthday": {
+                                                                "type": "string",
+                                                                "format": "date"
+                                                            },
+                                                            "status": {
                                                                 "type": "string"
                                                             },
-                                                            "__v": {
-                                                                "type": "number"
+                                                            "roles": {
+                                                                "type": "array",
+                                                                "items": {
+                                                                    "type": "string"
+                                                                }
                                                             }
-                                                        }
-                                                    }
-                                                }
-                                            }
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Missing credentials",
-                        "content": {}
-                    },
-                    "401": {
-                        "description": "Invalid token, please log in or sign up",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "status": {
-                                            "type": "string"
-                                        },
-                                        "error": {
-                                            "type": "object",
-                                            "properties": {
-                                                "message": {
-                                                    "type": "string"
-                                                },
-                                                "trace": {
-                                                    "type": "object",
-                                                    "properties": {
-                                                        "statusCode": {
-                                                            "type": "number"
                                                         }
                                                     }
                                                 }
@@ -161,21 +121,21 @@
                 "x-codegen-request-body-name": "body"
             }
         },
-        "/users/{id}": {
+        "/users/{uid}": {
             "get": {
                 "tags": [
-                    "User"
+                    "Users"
                 ],
-                "summary": "Retrieve user by id",
-                "operationId": "findUserById",
+                "summary": "Retrieve user by uid",
+                "operationId": "getUserById",
                 "parameters": [
                     {
-                        "name": "id",
+                        "name": "uid",
                         "in": "path",
                         "description": "ID of user to return",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "type": "integer"
                         }
                     }
                 ],
@@ -187,64 +147,36 @@
                                 "schema": {
                                     "type": "object",
                                     "properties": {
-                                        "status": {
-                                            "type": "string"
-                                        },
-                                        "message": {
-                                            "type": "string"
-                                        },
                                         "data": {
                                             "type": "object",
                                             "properties": {
                                                 "user": {
                                                     "type": "object",
                                                     "properties": {
-                                                        "_id": {
+                                                        "id": {
+                                                            "type": "integer"
+                                                        },
+                                                        "firstName": {
+                                                            "type": "string"
+                                                        },
+                                                        "lastName": {
                                                             "type": "string"
                                                         },
                                                         "email": {
                                                             "type": "string"
                                                         },
-                                                        "username": {
+                                                        "birthday": {
+                                                            "type": "string",
+                                                            "format": "date"
+                                                        },
+                                                        "status": {
                                                             "type": "string"
                                                         },
-                                                        "__v": {
-                                                            "type": "number"
-                                                        }
-                                                    }
-                                                }
-                                            }
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Missing credentials",
-                        "content": {}
-                    },
-                    "401": {
-                        "description": "Invalid token, please log in or sign up",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "status": {
-                                            "type": "string"
-                                        },
-                                        "error": {
-                                            "type": "object",
-                                            "properties": {
-                                                "message": {
-                                                    "type": "string"
-                                                },
-                                                "trace": {
-                                                    "type": "object",
-                                                    "properties": {
-                                                        "statusCode": {
-                                                            "type": "number"
+                                                        "roles": {
+                                                            "type": "array",
+                                                            "items": {
+                                                                "type": "string"
+                                                            }
                                                         }
                                                     }
                                                 }
@@ -265,7 +197,7 @@
             },
             "patch": {
                 "tags": [
-                    "User"
+                    "Users"
                 ],
                 "summary": "Update User By Id",
                 "operationId": "updateUserById",
@@ -389,7 +321,7 @@
             },
             "delete": {
                 "tags": [
-                    "User"
+                    "Users"
                 ],
                 "summary": "Delete User By Id",
                 "operationId": "deleteUserById",
@@ -477,11 +409,10 @@
             "User": {
                 "type": "object",
                 "properties": {
-                    "id": {
-                        "type": "integer",
-                        "format": "int64"
+                    "firstName": {
+                        "type": "string"
                     },
-                    "username": {
+                    "lastName": {
                         "type": "string"
                     },
                     "email": {
@@ -489,6 +420,10 @@
                     },
                     "password": {
                         "type": "string"
+                    },
+                    "birthday": {
+                        "type": "string",
+                        "format": "date"
                     }
                 },
                 "xml": {
